// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag renders with close button 1`] = `
<div
  className="Tag hasRemove purple"
>
  <div
    className="Content"
  >
    <span>
      Tag 1
    </span>
  </div>
  <UnstyledLink
    className="Close"
    onClick={[MockFunction]}
    onKeyDown={[Function]}
    role="button"
    to="javascript:void(0)"
  >
    <Close
      size={16}
    />
    <ScreenReaderOnly>
      Close
    </ScreenReaderOnly>
  </UnstyledLink>
</div>
`;

exports[`Tag renders without close button 1`] = `
<div
  className="Tag red"
>
  <div
    className="Content"
  >
    <span>
      Tag 1
    </span>
  </div>
</div>
`;
